--- a/isleephealth-patients-portal/initial/panel.html
+++ b/isleephealth-patients-portal/initial/panel.html
@@ -1,7 +1,7 @@
 <div id=page__ID>
 	<div id=panel__ID class="container-fluid" style='max-width:800px'>
 		<div class="text-center panel__ID">
-			<h2>Online Registration and Questionnaires<br>Initial Consultaion</h2>
+			<h2>Online Registration and Questionnaires<br>Initial Consultation</h2>
     	  	  <hr style='border-top:1px solid #000;'></hr>
     				  <h5 class= "text-left">
                           Please complete each of the following sections. Please call us on XX or email us on XXX if you are having trouble completing these questionnaires or there are questions you do not understand.<br><br>
