--- a/isleephealth-patients-portal/initial/modules/fss.html
+++ b/isleephealth-patients-portal/initial/modules/fss.html
@@ -519,7 +519,7 @@
                 </div>
             </div>
             <hr style='border-top:1px solid #000;'></hr>
-            <input type="text"  name="fss" id=fss__ID style='display:none'/>
+<!--            <input type="text"  name="fss" id=fss__ID style='display:none'/> -->
 			<br>
     		<button id=submit__ID type="submit" class="btn btn-secondary">Submit</button>
     	</div>
@@ -543,8 +543,6 @@
             event.preventDefault();
             $('#submit__ID').hide();
             //--------------------------------------------------------
-            $('#fss__ID').val((parseInt($("input[name='fss_1']:checked").val())+parseInt($("input[name='fss_2']:checked").val())+parseInt($("input[name='fss_3']:checked").val())+parseInt($("input[name='fss_4']:checked").val())+parseInt($("input[name='fss_5']:checked").val())+parseInt($("input[name='fss_6']:checked").val())+parseInt($("input[name='fss_7']:checked").val())+parseInt($("input[name='fss_8']:checked").val())+parseInt($("input[name='fss_9']:checked").val())));
-            //--------------------------------------------------------
             var data=$vm.serialize('#F__ID'); var dbv={}
             _before_submit(data,dbv);
             //--------------------------------------------------------
@@ -562,6 +560,7 @@
         })
         //--------------------------------------------------------
         var _before_submit=function(data,dbv){
+            before_submit_1(data,dbv);
             if($vm.coq_participant!=undefined){
                 data.Participant=$vm.coq_participant;
                 data.Participant_uid=$vm.coq_participant_uid;
@@ -569,6 +568,10 @@
                 dbv.PPID=$vm.coq_participant_pid;
                 dbv.PUID=$vm.coq_participant_uid;
             }
+        }
+        //--------------------------------------------------------
+        var before_submit_1=function(record,dbv){
+            record.fss=(parseInt(record.fss_1)+parseInt(record.fss_2)+parseInt(record.fss_3)+parseInt(record.fss_4)+parseInt(record.fss_5)+parseInt(record.fss_6)+parseInt(record.fss_7)+parseInt(record.fss_8)+parseInt(record.fss_9)).toString();
         }
         //--------------------------------------------------------
 	}
