--- a/isleephealth-patients-portal/initial/modules/medicare-referrals.html
+++ b/isleephealth-patients-portal/initial/modules/medicare-referrals.html
@@ -28,14 +28,12 @@
                         <div class=col>
                             Medicare Number
                             <input  class="form-control" type="text" id=Medicare_number__ID name="Medicare_number" placeholder="Medicare Number" required >
-                            <!--
                             <div id=alert_success__ID class="alert alert-success" >
                               <strong>Correct Medicare Number</strong>
                             </div>
                             <div id=alert_fail__ID class="alert alert-danger" >
                               <strong>Wrong Number! Please check</strong>
                             </div>
-                            -->
                         </div>
                     </div>
                     <div class="row row__ID" id=s1b__ID>
@@ -59,12 +57,12 @@
                         </div>
                     </div>
                     <div class="row row__ID" id=s3__ID>
-                        <div class="col" >
+<!--                        <div class="col" >
                             Self Funded Name
                             <input class="form-control" type="text" name="Found_Name" placeholder="Self Funded Name" required >
                             Self Funded Number
                             <input class="form-control" type="text" name="Found_Number" placeholder="Self Funded Number" required >
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -145,28 +143,22 @@
                  for (var i = 0; i< mcn1.length; i++) {output.push(+mcn1.charAt(i));}
                  var checksum=(output[0]*1+output[1]*3+output[2]*7+output[3]*9+output[4]*1+output[5]*3+output[6]*7+output[7]*9)%10;
                  if(checksum==parseInt(output[8])){
-                     /*
                      $('#alert_success__ID').show();
                      $('#alert_fail__ID').hide();
-                     alert_validation="";
-                     */
+                     //alert_validation="";
                  }
                  else{
-                     /*
                      $('#alert_success__ID').hide();
                      $('#alert_fail__ID').show();
-                     alert_validation="Please check for wrong Entry";
-                     $('#ModalLabel').html('Error!');
-                     */
+                     //alert_validation="Please check for wrong Entry";
+                     //$('#ModalLabel').html('Error!');
                  }
              }
             else {
-                /*
                 $('#alert_success__ID').hide();
                 $('#alert_fail__ID').show();
-                alert_validation="Please check for wrong Entry";
-                $('#ModalLabel').html('Error!');
-                */
+                //alert_validation="Please check for wrong Entry";
+                //$('#ModalLabel').html('Error!');
             }
         })
         //--------------------------------------------------------
@@ -186,7 +178,8 @@
             if($vm.vm['__ID'].op.input!=undefined && $vm.vm['__ID'].op.input.admin!=undefined) $('#admin__ID').show();
             $vm.deserialize(record,'#F__ID');
             $vm.render_file_field(record,'__ID',$('#File_Name__ID'));
-
+            $('#alert_success__ID').hide();
+            $('#alert_fail__ID').hide();
             benefits_process();
         })
         //-------------------------------------
