--- a/isleephealth-patients-portal/initial/modules/medicare-referrals.html
+++ b/isleephealth-patients-portal/initial/modules/medicare-referrals.html
@@ -356,7 +356,9 @@
     }
     .control_indicator:after {
         box-sizing: unset;
-        content: '';
+        content: '\2714';
+        top: 0px;
+        left: 3px;
         position: absolute;
         display: none;
     }
