--- a/isleephealth-patients-portal/initial/panel.html
+++ b/isleephealth-patients-portal/initial/panel.html
@@ -4,7 +4,7 @@
 			<h2>Online Registration and Questionnaires<br>Initial Consultation</h2>
     	  	  <hr style='border-top:1px solid #000;'></hr>
     				  <h5 class= "text-left">
-                          Please complete each of the following sections. Please call us on XX or email us on XXX if you are having trouble completing these questionnaires or there are questions you do not understand.<br><br>
+                          Please complete each of the following sections. Please call us on 9238 2209 (MLC patients) or 9238 2209 (Bondi Junction patients) or email us on info@isleephealth.com.au if you are having trouble completing these questionnaires or there are questions you do not understand.<br><br>
                       </h5>
                       <div class="text-left">
                           <ul>
