--- a/isleephealth-patients-portal/initial/modules/contact-details.html
+++ b/isleephealth-patients-portal/initial/modules/contact-details.html
@@ -3,7 +3,7 @@
 </div>
 <section id=form_container__ID>
     <div id=header__ID>
-		Your Details
+		Your Detailsa
 	</div>
     <form id=F__ID>
         <div class="container">
