--- a/isleephealth-patients-portal/initial/modules/medicare-referrals.html
+++ b/isleephealth-patients-portal/initial/modules/medicare-referrals.html
@@ -98,7 +98,7 @@
             </div>
             <div class="row row__ID">
                 <div class="col">
-                    Referring letter
+                    Referring letter (Attach by clicking on <i class="fa fa-file"></i> below)
                     <div id=File_Name__ID data-id=File_Name></div>
                 </div>
             </div>
