--- a/isleephealth-patients-portal/initial/modules/contact-details.html
+++ b/isleephealth-patients-portal/initial/modules/contact-details.html
@@ -3,14 +3,18 @@
 </div>
 <section id=form_container__ID>
     <div id=header__ID>
-		Your Detailsa
+		Your Details
 	</div>
     <form id=F__ID>
         <div class="container">
             <div class="row row__ID">
-                <div class="col-sm-6" >
-                    Name <i>(Last, First, M.I.)</i>
-                    <input  class="form-control" type="text" id=name__ID name="name" placeholder="Name (Last, First, M.I.)" required>
+                <div class="col-sm-3" >
+                    First Name
+                    <input  class="form-control" type="text" id=first_name__ID name="first_name" placeholder="First Name" required>
+                </div>
+                <div class="col-sm-3" >
+                    Last Name
+                    <input  class="form-control" type="text" id=last_name__ID name="last_name" placeholder="Last Name" required>
                 </div>
                 <div class="col-sm-3">
                     Sex
