--- a/isleephealth-patients-portal/initial/modules/health-history.html
+++ b/isleephealth-patients-portal/initial/modules/health-history.html
@@ -14,17 +14,11 @@
 					<span>High blood pressure</span>
                 </div>
                 <div class="col-sm-2 control-group">
-					<label class="control control-radio">Yes
-							<input type="radio"  name="hypertension" value=Yes required />
+					<label class="control check_checkmark">
+							<input type="checkbox"  name="hypertension"  />
 						<div class="control_indicator"></div>
 					</label>
                 </div>
-                <div class="col-sm-2 control-group">
-					<label class="control control-radio">No
-							<input type="radio" name="hypertension" value=No />
-						<div class="control_indicator"></div>
-					</label>
-				</div>
             </div>
             <div class="row row__ID">
                 <div class="col-sm-6 control-group">
@@ -40,99 +34,63 @@
 					<span>Diabetes – Type 1</span>
                 </div>
                 <div class="col-sm-2 control-group">
-					<label class="control control-radio">Yes
-							<input type="radio"  name="diabetes_1" value=Yes required />
+					<label class="control check_checkmark">
+							<input type="checkbox"  name="diabetes_1"  />
 						<div class="control_indicator"></div>
 					</label>
                 </div>
-                <div class="col-sm-2 control-group">
-					<label class="control control-radio">No
-							<input type="radio" name="diabetes_1" value=No />
-						<div class="control_indicator"></div>
-					</label>
-				</div>
             </div>
             <div class="row row__ID">
                 <div class="col-sm-6 control-group">
 					<span>Diabetes – Type 2</span>
                 </div>
                 <div class="col-sm-2 control-group">
-					<label class="control control-radio">Yes
-							<input type="radio"  name="diabetes_2" value=Yes required />
+					<label class="control check_checkmark">
+							<input type="checkbox"  name="diabetes_2"  />
 						<div class="control_indicator"></div>
 					</label>
                 </div>
-                <div class="col-sm-2 control-group">
-					<label class="control control-radio">No
-							<input type="radio" name="diabetes_2" value=No />
-						<div class="control_indicator"></div>
-					</label>
-				</div>
             </div>
 			<div class="row row__ID">
                 <div class="col-sm-6 control-group">
 					<span>Broken nose</span>
                 </div>
                 <div class="col-sm-2 control-group">
-					<label class="control control-radio">Yes
-							<input type="radio"  name="broken_nose" value=Yes required />
+					<label class="control check_checkmark">
+							<input type="checkbox"  name="broken_nose"  />
 						<div class="control_indicator"></div>
 					</label>
                 </div>
-                <div class="col-sm-2 control-group">
-					<label class="control control-radio">No
-							<input type="radio" name="broken_nose" value=No />
-						<div class="control_indicator"></div>
-					</label>
-				</div>
             </div>
             <div class="row row__ID">
                 <div class="col-sm-6 control-group">
 					<span>Stroke</span>
                 </div>
                 <div class="col-sm-2 control-group">
-					<label class="control control-radio">Yes
-							<input type="radio"  name="stroke" value=Yes required />
+					<label class="control check_checkmark">
+							<input type="checkbox"  name="stroke"  />
 						<div class="control_indicator"></div>
 					</label>
                 </div>
-                <div class="col-sm-2 control-group">
-					<label class="control control-radio">No
-							<input type="radio" name="stroke" value=No />
-						<div class="control_indicator"></div>
-					</label>
-				</div>
             </div>
             <div class="row row__ID">
                 <div class="col-sm-6 control-group">
 					<span>Epilepsy / Fits</span>
                 </div>
                 <div class="col-sm-2 control-group">
-					<label class="control control-radio">Yes
-							<input type="radio"  name="epilepsy" value=Yes required />
+					<label class="control check_checkmark">
+							<input type="checkbox"  name="epilepsy"  />
 						<div class="control_indicator"></div>
 					</label>
                 </div>
-                <div class="col-sm-2 control-group">
-					<label class="control control-radio">No
-							<input type="radio" name="epilepsy" value=No />
-						<div class="control_indicator"></div>
-					</label>
-				</div>
             </div>
             <div class="row row__ID">
                 <div class="col-sm-6 control-group">
                     <span>Tonsillitis / recurrent sore throat</span>
                 </div>
                 <div class="col-sm-2 control-group">
-                    <label class="control control-radio">Yes
-                            <input type="radio"  name="tonsillitis" value=Yes required />
-                        <div class="control_indicator"></div>
-                    </label>
-                </div>
-                <div class="col-sm-2 control-group">
-                    <label class="control control-radio">No
-                            <input type="radio" name="tonsillitis" value=No />
+                    <label class="control check_checkmark">
+                            <input type="checkbox"  name="tonsillitis"  />
                         <div class="control_indicator"></div>
                     </label>
                 </div>
@@ -142,17 +100,11 @@
 					<span>Hay fever / sinusitis</span>
                 </div>
                 <div class="col-sm-2 control-group">
-					<label class="control control-radio">Yes
-							<input type="radio"  name="sinusitis" value=Yes required />
+					<label class="control check_checkmark">
+							<input type="checkbox"  name="sinusitis"  />
 						<div class="control_indicator"></div>
 					</label>
                 </div>
-                <div class="col-sm-2 control-group">
-					<label class="control control-radio">No
-							<input type="radio" name="sinusitis" value=No />
-						<div class="control_indicator"></div>
-					</label>
-				</div>
             </div>
             <div class="row row__ID">
                 <div class="col-sm-10 control-group">
@@ -369,125 +321,5 @@ function F__ID(){
         animation: vm_module_fadein 1.0s;
         background: rgba(151,164,181,0.95);
     }
-    #form_container__ID{
-        padding-top:50px;
-        max-width: 800px;
-        margin-left: auto;
-        margin-right: auto;
-
-        font-family: Verdana,sans-serif;
-        font-size: 15px;
-        line-height: 1.5;
-        color: #000;
-    }
-    #form_container__ID .row__ID{
-        padding:6px 0;
-    }
-    #form_container__ID .row__ID:hover{
-        background-color: #727b84;
-    }
-    #header__ID{
-        background-color:#727b84;
-        color:#000;
-        padding:10px 15px 10px 15px;
-        font-size:150%;
-    }
-    #quest__ID{
-        padding:5px 5px 5px 5px;
-        font-size:120%;
-    }
-    #F__ID{
-        border:1px solid #727b84;
-        padding:6px 15px 20px 15px;
-    }
-    #F__ID label
-        display: inline-block;
-        margin: .6rem 0 .3rem 0;
-    }
-
-    #F__ID fieldset {
-        border: 0px solid #c0c0c0;
-        margin: 0;
-        padding: 0;
-    }
-    @media screen and (max-width:768px){
-        #form_container__ID{
-            padding:20px 10px 50px 10px;
-        }
-    }
-    .control {
-        font-family: arial;
-        display: block;
-        position: relative;
-        padding-left: 30px;
-        margin-bottom: 5px;
-        padding-top: 3px;
-        cursor: pointer;
-        font-size: 16px;
-    }
-    .control {
-        font-family: arial;
-        display: block;
-        position: relative;
-        padding-left: 30px;
-        margin-bottom: 5px;
-        padding-top: 3px;
-        cursor: pointer;
-        font-size: 16px;
-    }
-        .control input {
-            position: absolute;
-            z-index: -1;
-            opacity: 0;
-        }
-    .control_indicator {
-        position: absolute;
-        top: 2px;
-        left: 0;
-        height: 20px;
-        width: 20px;
-        background: #e6e6e6;
-        border: 0px solid #000000;
-    }
-    .control-radio .control_indicator {
-        border-radius: 50%;
-    }
-
-    .control:hover input ~ .control_indicator,
-    .control input:focus ~ .control_indicator {
-        background: #cccccc;
-    }
-
-    .control input:checked ~ .control_indicator {
-        background: #A51C3D;
-    }
-    .control:hover input:not([disabled]):checked ~ .control_indicator,
-    .control input:checked:focus ~ .control_indicator {
-        background: #0e6647d;
-    }
-    .control input:disabled ~ .control_indicator {
-        background: #e6e6e6;
-        opacity: 0.6;
-        pointer-events: none;
-    }
-    .control_indicator:after {
-        box-sizing: unset;
-        content: '';
-        position: absolute;
-        display: none;
-    }
-    .control input:checked ~ .control_indicator:after {
-        display: block;
-    }
-    .control-radio .control_indicator:after {
-        left: 7px;
-        top: 7px;
-        height: 0px;
-        width: 0px;
-        border-radius: 50%;
-        background: #ffffff;
-    }
-    .control-radio input:disabled ~ .control_indicator:after {
-        background: #7b7b7b;
-    }
 </style>
+VmInclude:__CURRENT_PATH__/task-form.css
