--- a/modules/frame/home.html
+++ b/modules/frame/home.html
@@ -2,7 +2,6 @@
 	<div id=panel__ID class="container-fluid" style='max-width:400px'>
 		<div class="text-center panel__ID">
             <h1  class="text-center" >Sign In</h1>
-			<br>
             <hr style='border-top:1px solid #fff;'></hr>
             <div class="">
                 <input id=username__ID placeholder="Username" class="form-control" autocomplete="off" />
@@ -86,7 +85,7 @@
 		height:100%;
         overflow:auto;
 		animation: vm_module_fadein 1.0s;
-		background:rgba(255,255,255,0.2);
+		background: rgba(255,255,255,0.65);
 	}
 	#page__ID{
 		height:100%;
@@ -96,8 +95,8 @@
 	.panel__ID{
 		color:#ddd;
 		font-weight: normal;
-		background: rgba(20,20,20,0.8);
-	    padding: 30px 20px 10px 20px;
+		background-color: #446676;
+	    padding: 30px 60px 30px 60px;
 	    border-radius: 15px;
 	}
 	@media screen and (max-width:786px){
