--- a/modules/frame/initial.html
+++ b/modules/frame/initial.html
@@ -22,7 +22,7 @@
                       <h5 class= "text-left">
                           Once they are completed please click on ‘sign-out’ below, to exit the system. <br>Thank you for your time in helping us help you during your upcoming visit. We look forward to seeing you soon.<br><br>
                       </h5>
-                      <a name=signinout onclick="$vm.nav_click_process('vm_signinout');" class="btn btn-primary" style='cursor:pointer'>Sign out</a>
+                      <a name=signinout onclick="$vm.nav_signout_and_reload('home');" class="btn btn-primary" style='cursor:pointer'>Sign out</a>
     			  </div>
               </div>
 		</div>
