--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>ISH Patient Portal</title>
+		<title>A basic application framework</title>
 		<meta charset="utf-8">
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
-		<script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.2.1.min.js"></script>
-        <script>$.ajaxSetup({cache:true});$.get('version.html',function(v){ console.log(v); $vm={}; $vm.ver=v.trim().split(',');$.getScript('index.js?_sv='+$vm.ver[2],function(){vm_init();});},'text')</script>
+		<meta name="description" content="Modular distributed web application. A single page application with shared reusable modules distributed on different static web servers around the world and maintained by different people with different skills!">
+        <link rel="icon" href="data:,">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.css" />
+        <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.2.1.min.js"></script>
+		<script src="sys/bios.js?v=1.00"></script>
 	</head>
-	<body></body>
+	<body><div id=vm_framework></div></body>
 </html>
