--- a/modules/initial/sleep-history.html
+++ b/modules/initial/sleep-history.html
@@ -177,9 +177,8 @@
                                <span class="checkmark"></span>No</label><br>
                            </fieldset>
                            <fieldset class="">
-                             <label ><span class="">If yes, Describe</span><br>
-                               <textarea class="form-control" type="text" name="unusual_movements_describe"></textarea>
-                              </label>
+                             <label ><span class="">If yes, Describe</span></label><br>
+                               <textarea class="form-control" name="unusual_movements_describe"></textarea>
                          </fieldset>
                      </div>
                  </div>
@@ -197,7 +196,7 @@
                          <fieldset class="subquestions">
                              <label>
                                  <span class="">If yes, how many times on average per night?</span>
-                                 <input class="form-control" type="text" name="toilet_number">
+                                 <input class="form-control" type="number" min=0 name="toilet_number">
                              </label><br>
                          </fieldset>
                      </div>
