--- a/modules/initial/phq.html
+++ b/modules/initial/phq.html
@@ -21,16 +21,16 @@
                            <fieldset class="subquestions">
                               <label class="radiobuttons">
                                 <input type="radio" name="phq_1" value="0" required>
-                                <span class="checkmark">&nbsp;&nbsp;0</span>Not at all</label><br>
+                                <span class="checkmark">0</span>Not at all</label><br>
                               <label class="radiobuttons">
                                 <input type="radio" name="phq_1" value="1">
-                                <span class="checkmark">&nbsp;&nbsp;1</span>Several days</label><br>
+                                <span class="checkmark">1</span>Several days</label><br>
                               <label class="radiobuttons">
                                 <input type="radio" name="phq_1" value="2">
-                                <span class="checkmark">&nbsp;&nbsp;2</span>More than half the days</label><br>
+                                <span class="checkmark">2</span>More than half the days</label><br>
                               <label class="radiobuttons">
                                 <input type="radio" name="phq_1" value="3">
-                                <span class="checkmark">&nbsp;&nbsp;3</span>Nearly every day</label><br>
+                                <span class="checkmark">3</span>Nearly every day</label><br>
                           </fieldset>
                      </div>
       		      </div>
@@ -40,16 +40,16 @@
                            <fieldset class="subquestions">
                               <label class="radiobuttons">
                                 <input type="radio" name="phq_2" value="0" required>
-                                <span class="checkmark">&nbsp;&nbsp;0</span>Not at all</label><br>
+                                <span class="checkmark">0</span>Not at all</label><br>
                               <label class="radiobuttons">
                                 <input type="radio" name="phq_2" value="1">
-                                <span class="checkmark">&nbsp;&nbsp;1</span>Several days</label><br>
+                                <span class="checkmark">1</span>Several days</label><br>
                               <label class="radiobuttons">
                                 <input type="radio" name="phq_2" value="2">
-                                <span class="checkmark">&nbsp;&nbsp;2</span>More than half the days</label><br>
+                                <span class="checkmark">2</span>More than half the days</label><br>
                               <label class="radiobuttons">
                                 <input type="radio" name="phq_2" value="3">
-                                <span class="checkmark">&nbsp;&nbsp;3</span>Nearly every day</label><br>
+                                <span class="checkmark">3</span>Nearly every day</label><br>
                           </fieldset>
                      </div>
       		      </div>
@@ -59,16 +59,16 @@
                            <fieldset class="subquestions">
                               <label class="radiobuttons">
                                 <input type="radio" name="phq_3" value="0" required>
-                                <span class="checkmark">&nbsp;&nbsp;0</span> Not at all</label><br>
+                                <span class="checkmark">0</span> Not at all</label><br>
                               <label class="radiobuttons">
                                 <input type="radio" name="phq_3" value="1">
-                                <span class="checkmark">&nbsp;&nbsp;1</span> Several days</label><br>
+                                <span class="checkmark">1</span> Several days</label><br>
                               <label class="radiobuttons">
                                 <input type="radio" name="phq_3" value="2">
-                                <span class="checkmark">&nbsp;&nbsp;2</span> More than half the days</label><br>
+                                <span class="checkmark">2</span> More than half the days</label><br>
                               <label class="radiobuttons">
                                 <input type="radio" name="phq_3" value="3">
-                                <span class="checkmark">&nbsp;&nbsp;3</span> Nearly every day</label><br>
+                                <span class="checkmark">3</span> Nearly every day</label><br>
                           </fieldset>
                      </div>
       		      </div>
@@ -78,16 +78,16 @@
                            <fieldset class="subquestions">
                               <label class="radiobuttons">
                                 <input type="radio" name="phq_4" value="0" required>
-                                <span class="checkmark">&nbsp;&nbsp;0</span> Not at all</label><br>
+                                <span class="checkmark">0</span> Not at all</label><br>
                               <label class="radiobuttons">
                                 <input type="radio" name="phq_4" value="1">
-                                <span class="checkmark">&nbsp;&nbsp;1</span> Several days</label><br>
+                                <span class="checkmark">1</span> Several days</label><br>
                               <label class="radiobuttons">
                                 <input type="radio" name="phq_4" value="2">
-                                <span class="checkmark">&nbsp;&nbsp;2</span> More than half the days</label><br>
+                                <span class="checkmark">2</span> More than half the days</label><br>
                               <label class="radiobuttons">
                                 <input type="radio" name="phq_4" value="3">
-                                <span class="checkmark">&nbsp;&nbsp;3</span> Nearly every day</label><br>
+                                <span class="checkmark">3</span> Nearly every day</label><br>
                           </fieldset>
                      </div>
       		      </div>
@@ -97,16 +97,16 @@
                            <fieldset class="subquestions">
                               <label class="radiobuttons">
                                 <input type="radio" name="phq_5" value="0" required>
-                                <span class="checkmark">&nbsp;&nbsp;0</span> Not at all</label><br>
+                                <span class="checkmark">0</span> Not at all</label><br>
                               <label class="radiobuttons">
                                 <input type="radio" name="phq_5" value="1">
-                                <span class="checkmark">&nbsp;&nbsp;1</span> Several days</label><br>
+                                <span class="checkmark">1</span> Several days</label><br>
                               <label class="radiobuttons">
                                 <input type="radio" name="phq_5" value="2">
-                                <span class="checkmark">&nbsp;&nbsp;2</span> More than half the days</label><br>
+                                <span class="checkmark">2</span> More than half the days</label><br>
                               <label class="radiobuttons">
                                 <input type="radio" name="phq_5" value="3">
-                                <span class="checkmark">&nbsp;&nbsp;3</span> Nearly every day</label><br>
+                                <span class="checkmark">3</span> Nearly every day</label><br>
                           </fieldset>
                      </div>
       		      </div>
@@ -116,16 +116,16 @@
                            <fieldset class="subquestions">
                               <label class="radiobuttons">
                                 <input type="radio" name="phq_6" value="0" required>
-                                <span class="checkmark">&nbsp;&nbsp;0</span> Not at all</label><br>
+                                <span class="checkmark">0</span> Not at all</label><br>
                               <label class="radiobuttons">
                                 <input type="radio" name="phq_6" value="1">
-                                <span class="checkmark">&nbsp;&nbsp;1</span> Several days</label><br>
+                                <span class="checkmark">1</span> Several days</label><br>
                               <label class="radiobuttons">
                                 <input type="radio" name="phq_6" value="2">
-                                <span class="checkmark">&nbsp;&nbsp;2</span> More than half the days</label><br>
+                                <span class="checkmark">2</span> More than half the days</label><br>
                               <label class="radiobuttons">
                                 <input type="radio" name="phq_6" value="3">
-                                <span class="checkmark">&nbsp;&nbsp;3</span> Nearly every day</label><br>
+                                <span class="checkmark">3</span> Nearly every day</label><br>
                           </fieldset>
                      </div>
       		      </div>
@@ -135,16 +135,16 @@
                            <fieldset class="subquestions">
                               <label class="radiobuttons">
                                 <input type="radio" name="phq_7" value="0" required>
-                                <span class="checkmark">&nbsp;&nbsp;0</span> Not at all</label><br>
+                                <span class="checkmark">0</span> Not at all</label><br>
                               <label class="radiobuttons">
                                 <input type="radio" name="phq_7" value="1">
-                                <span class="checkmark">&nbsp;&nbsp;1</span> Several days</label><br>
+                                <span class="checkmark">1</span> Several days</label><br>
                               <label class="radiobuttons">
                                 <input type="radio" name="phq_7" value="2">
-                                <span class="checkmark">&nbsp;&nbsp;2</span> More than half the days</label><br>
+                                <span class="checkmark">2</span> More than half the days</label><br>
                               <label class="radiobuttons">
                                 <input type="radio" name="phq_7" value="3">
-                                <span class="checkmark">&nbsp;&nbsp;3</span> Nearly every day</label><br>
+                                <span class="checkmark">3</span> Nearly every day</label><br>
                           </fieldset>
                      </div>
       		      </div>
@@ -154,16 +154,16 @@
                            <fieldset class="subquestions">
                               <label class="radiobuttons">
                                 <input type="radio" name="phq_8" value="0" required>
-                                <span class="checkmark">&nbsp;&nbsp;0</span> Not at all</label><br>
+                                <span class="checkmark">0</span> Not at all</label><br>
                               <label class="radiobuttons">
                                 <input type="radio" name="phq_8" value="1">
-                                <span class="checkmark">&nbsp;&nbsp;1</span> Several days</label><br>
+                                <span class="checkmark">1</span> Several days</label><br>
                               <label class="radiobuttons">
                                 <input type="radio" name="phq_8" value="2">
-                                <span class="checkmark">&nbsp;&nbsp;2</span> More than half the days</label><br>
+                                <span class="checkmark">2</span> More than half the days</label><br>
                               <label class="radiobuttons">
                                 <input type="radio" name="phq_8" value="3">
-                                <span class="checkmark">&nbsp;&nbsp;3</span> Nearly every day</label><br>
+                                <span class="checkmark">3</span> Nearly every day</label><br>
                           </fieldset>
                      </div>
       		      </div>
@@ -173,16 +173,16 @@
                            <fieldset class="subquestions">
                               <label class="radiobuttons">
                                 <input type="radio" name="phq_9" value="0" required>
-                                <span class="checkmark">&nbsp;&nbsp;0</span> Not at all</label><br>
+                                <span class="checkmark">0</span> Not at all</label><br>
                               <label class="radiobuttons">
                                 <input type="radio" name="phq_9" value="1">
-                                <span class="checkmark">&nbsp;&nbsp;1</span> Several days</label><br>
+                                <span class="checkmark">1</span> Several days</label><br>
                               <label class="radiobuttons">
                                 <input type="radio" name="phq_9" value="2">
-                                <span class="checkmark">&nbsp;&nbsp;2</span> More than half the days</label><br>
+                                <span class="checkmark">2</span> More than half the days</label><br>
                               <label class="radiobuttons">
                                 <input type="radio" name="phq_9" value="3">
-                                <span class="checkmark">&nbsp;&nbsp;3</span> Nearly every day</label><br>
+                                <span class="checkmark">3</span> Nearly every day</label><br>
                           </fieldset>
                      </div>
       		      </div>
