--- a/modules/initial/mirror/health-history.html
+++ b/modules/initial/mirror/health-history.html
@@ -18,10 +18,10 @@
                                <span class="check_checkmark"></span></label>
                          </fieldset>
                      </div>
-                     <div class="questiongroup ">
+                     <div class="questiongroup">
                          <fieldset class="">
-                           <span class="">Other heart condition. Please specify:</span><br>
-                             <input class="form-control" type=text name="heart_other_specify">
+                           <label class=""><span class="">Other heart condition. Please specify:</span></label>
+                             <input class="form-control" type=text name="heart_other_specify"><br>
                          </fieldset>
                      </div>
                      <div class="questiongroup ">
