--- a/sys/layout.html
+++ b/sys/layout.html
@@ -64,7 +64,7 @@
     $vm.app_config={
         "api_path_development":"https://cbs.wappsystem.com/dev/",
         "api_path_production":"https://cbs.wappsystem.com/pro/",
-        "default_production":"No",
+        "default_production":"Yes",
     }
     $vm.qid='10000000';
     $vm.vm_router=1;
