--- a/modules/initial/mirror/medicare-referrals.html
+++ b/modules/initial/mirror/medicare-referrals.html
@@ -96,15 +96,17 @@
                          </fieldset>
                      </div>
                  </div>
+<!--
                  <div class="form-group">
      				 <div class="questiongroup ">
                         <fieldset class="">
-                            <label ><span class="">Referring letter (Attach file by clicking on <i class="fa fa-file"></i> below)</span>
+                            <label ><span class="">Referring letter (Attach file by clicking on <i class="fa fa-paperclip"></i> below)</span>
                                 <div id=File_Name__ID data-id=File_Name></div>
                            </label><br>
                          </fieldset>
                      </div>
                  </div>
+-->
                  <button type="submit" id="submit__ID" class="btn btn-primary btn-lg">Submit</button>
               </form>
             </div>
