--- a/modules/initial/mirror/phq-report.html
+++ b/modules/initial/mirror/phq-report.html
@@ -11,6 +11,17 @@
               <form id="F__ID">
                   <h3>Patient Health Questionnaire (PHQ-9)</h3>
                   <div class="form-group">
+                      <div class="questiongroup">
+                            <fieldset>
+                                <label class="">
+                                  <input type="text" class="form-control" name="phq">
+                                  </label>
+                                  <label class="">PHQ
+                                    </label>
+                            </fieldset>
+                       </div>
+                  </div>
+                  <div class="form-group">
       				  <div class="questiongroup">
                           <fieldset>
                               <label class="">
