--- a/sys/layout.html
+++ b/sys/layout.html
@@ -67,7 +67,7 @@
         "default_production":"Yes",
     }
     $vm.qid='10000000';
-    $vm.vm_router=1;
+    //$vm.vm_router=1;
     //------------------------------------
     $vm.default_title="Integrated Sleep Health";
     $vm.show=function(id){
