--- a/modules/initial/mirror/contact-details.html
+++ b/modules/initial/mirror/contact-details.html
@@ -1,5 +1,5 @@
 <div id=D__ID>
-<!--third html start -->
+    <!--third html start -->
     <div class="container mt-95 mb-3">
       <div class="row" >
         <!-- form container start -->
@@ -75,60 +75,29 @@
          </div>
         </div>
       </div>
-  </div>
-  <script>
-      function F__ID(){
-          //-------------------------------------
-          $('#D__ID').on('load',function(){
-              $('#F__ID')[0].reset();
-              $('#F__ID input:checkbox').removeAttr('checked');
-              $('#submit__ID').show();
-  			var record=$vm.vm['__ID'].op.record; if(record==undefined) record=$vm.vm['__ID'].op.input.record;
-              if($vm.vm['__ID'].op.input!=undefined && $vm.vm['__ID'].op.input.readonly!=undefined) $('#submit__ID').hide();
-              if($vm.vm['__ID'].op.input!=undefined && $vm.vm['__ID'].op.input.admin!=undefined) $('#admin__ID').show();
-              $vm.deserialize(record,'#F__ID');
-          })
-          //-------------------------------------
-  		$('#F__ID').submit(function(event){
-  			//--------------------------------------------------------
-  			event.preventDefault();
-  			$('#submit__ID').hide();
-  			//--------------------------------------------------------
-              var data=$vm.serialize('#F__ID'); var dbv={}
-              _before_submit(data,dbv);
-  			//--------------------------------------------------------
-              var db_pid=$vm.module_list[$vm.vm['__ID'].name].table_id;
-              var rid=undefined; if($vm.vm['__ID'].op.record!=undefined) rid=$vm.vm['__ID'].op.record.ID;
-              var req={cmd:"add_json_record_s2",db_pid:db_pid,data:data,dbv:dbv};
-  			if(rid!=undefined) req={cmd:"modify_json_record_s2",rid:rid,db_pid:db_pid,data:data,dbv:dbv};
-              $VmAPI.request({data:req,callback:function(res){
-                  $vm.refresh=1;
-                  if(rid!=undefined) window.history.go(-1);
-  				else if($vm.vm['__ID'].op.input!=undefined && $vm.vm['__ID'].op.input.goback!=undefined) window.history.go(-1);
-                  else $vm.alert('Your data has been successfully submitted');
-              }});
-  			//--------------------------------------------------------
-  		})
-  		//--------------------------------------------------------
-          var _before_submit=function(data,dbv){
-              if($vm.coq_participant!=undefined){
-                  data.Participant=$vm.coq_participant;
-              	data.Participant_uid=$vm.coq_participant_uid;
-          		dbv.S1=$vm.coq_visit;
-          		dbv.PPID=$vm.coq_participant_pid;
-          		dbv.PUID=$vm.coq_participant_uid;
-              }
-  		}
-          //--------------------------------------------------------
-  	}
-  </script>
-  <style>
-    #D__ID{
-      height:100%;
-      animation: vm_module_fadein 1.0s;
-      /*background-color: #fff;*/
-      overflow:auto;
-    }
-  </style>
-  VmInclude:__CURRENT_PATH__/task-form.css
-  </div>
+    </div>
+    <script>
+        function F__ID(){
+            //-------------------------------------
+            VmInclude:__COMPONENT__/module/form.v1.js
+            VmInclude:__CURRENT_PATH__/task-form.js
+            //-------------------------------------
+            m.default_load=m.load;
+            m.load=function(){
+                //$('#F__ID input:checkbox').removeAttr('checked');
+                m.default_load();
+                if(m.input.readonly!=undefined) $('#submit__ID').hide();
+            }
+            //-------------------------------------
+        }
+    </script>
+    <style>
+        #D__ID{
+            height:100%;
+            animation: vm_module_fadein 1.0s;
+            /*background-color: #fff;*/
+            overflow:auto;
+        }
+    </style>
+    VmInclude:__CURRENT_PATH__/task-form.css
+</div>
