--- a/modules/initial/mirror/fss.html
+++ b/modules/initial/mirror/fss.html
@@ -415,9 +415,9 @@
               $('#F__ID')[0].reset();
               $('#F__ID input:checkbox').removeAttr('checked');
               $('#submit__ID').show();
-              var record=$vm.vm['__ID'].op.record; if(record==undefined) record=$vm.vm['__ID'].op.input.record;
-              if($vm.vm['__ID'].op.input!=undefined && $vm.vm['__ID'].op.input.readonly!=undefined) $('#submit__ID').hide();
-              if($vm.vm['__ID'].op.input!=undefined && $vm.vm['__ID'].op.input.admin!=undefined) $('#admin__ID').show();
+              var record=$vm.vm['__ID'].record; if(record==undefined) record=$vm.vm['__ID'].input.record;
+              if($vm.vm['__ID'].input!=undefined && $vm.vm['__ID'].input.readonly!=undefined) $('#submit__ID').hide();
+              if($vm.vm['__ID'].input!=undefined && $vm.vm['__ID'].input.admin!=undefined) $('#admin__ID').show();
               $vm.deserialize(record,'#F__ID');
           })
           //-------------------------------------
@@ -430,13 +430,13 @@
               _before_submit(data,dbv);
               //--------------------------------------------------------
               var db_pid=$vm.module_list[$vm.vm['__ID'].name].table_id;
-              var rid=undefined; if($vm.vm['__ID'].op.record!=undefined) rid=$vm.vm['__ID'].op.record.ID;
+              var rid=undefined; if($vm.vm['__ID'].record!=undefined) rid=$vm.vm['__ID'].record.ID;
               var req={cmd:"add_json_record_s2",db_pid:db_pid,data:data,dbv:dbv};
               if(rid!=undefined) req={cmd:"modify_json_record_s2",rid:rid,db_pid:db_pid,data:data,dbv:dbv};
               $VmAPI.request({data:req,callback:function(res){
                   $vm.refresh=1;
                   if(rid!=undefined) window.history.go(-1);
-                  else if($vm.vm['__ID'].op.input!=undefined && $vm.vm['__ID'].op.input.goback!=undefined) window.history.go(-1);
+                  else if($vm.vm['__ID'].input!=undefined && $vm.vm['__ID'].input.goback!=undefined) window.history.go(-1);
                   else $vm.alert('Your data has been successfully submitted');
               }});
               //--------------------------------------------------------
