--- a/modules/initial/mirror/medicare-referrals-old.html
+++ b/modules/initial/mirror/medicare-referrals-old.html
@@ -173,9 +173,9 @@
             $('#F__ID')[0].reset();
             $('#F__ID input:checkbox').removeAttr('checked');
             $('#submit__ID').show();
-            var record=$vm.vm['__ID'].op.record; if(record==undefined) record=$vm.vm['__ID'].op.input.record;
-            if($vm.vm['__ID'].op.input!=undefined && $vm.vm['__ID'].op.input.readonly!=undefined) $('#submit__ID').hide();
-            if($vm.vm['__ID'].op.input!=undefined && $vm.vm['__ID'].op.input.admin!=undefined) $('#admin__ID').show();
+            var record=$vm.vm['__ID'].record; if(record==undefined) record=$vm.vm['__ID'].input.record;
+            if($vm.vm['__ID'].input!=undefined && $vm.vm['__ID'].input.readonly!=undefined) $('#submit__ID').hide();
+            if($vm.vm['__ID'].input!=undefined && $vm.vm['__ID'].input.admin!=undefined) $('#admin__ID').show();
             $vm.deserialize(record,'#F__ID');
             $vm.render_file_field(record,'__ID',$('#File_Name__ID'));
             $('#alert_success__ID').hide();
@@ -195,7 +195,7 @@
             _before_submit(data,dbv);
             //--------------------------------------------------------
             var db_pid=$vm.module_list[$vm.vm['__ID'].name].table_id;
-            var rid=undefined; if($vm.vm['__ID'].op.record!=undefined) rid=$vm.vm['__ID'].op.record.ID;
+            var rid=undefined; if($vm.vm['__ID'].record!=undefined) rid=$vm.vm['__ID'].record.ID;
             var req={cmd:"add_json_record_s2",db_pid:db_pid,data:data,dbv:dbv};
             if(rid!=undefined) req={cmd:"modify_json_record_s2",rid:rid,db_pid:db_pid,data:data,dbv:dbv};
             var old_rid=rid;
@@ -210,7 +210,7 @@
 	        			$VmAPI.request({data:req,callback:function(res){
                             $vm.refresh=1;
                             if(old_rid!=undefined) window.history.go(-1);
-                            else if($vm.vm['__ID'].op.input!=undefined && $vm.vm['__ID'].op.input.goback!=undefined) window.history.go(-1);
+                            else if($vm.vm['__ID'].input!=undefined && $vm.vm['__ID'].input.goback!=undefined) window.history.go(-1);
                             else $vm.alert('Your data has been successfully submitted');
 	                    }})
 	                })
@@ -218,7 +218,7 @@
 				else{
                     $vm.refresh=1;
                     if(old_rid!=undefined) window.history.go(-1);
-                    else if($vm.vm['__ID'].op.input!=undefined && $vm.vm['__ID'].op.input.goback!=undefined) window.history.go(-1);
+                    else if($vm.vm['__ID'].input!=undefined && $vm.vm['__ID'].input.goback!=undefined) window.history.go(-1);
                     else $vm.alert('Your data has been successfully submitted');
 				}
             }});
